# MTSFV

./: .gitignore  BUILD.md  CMakeLists.txt  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  README.md  RUST_INTEGRATION.md  RUST_MIGRATION_STATUS.md
.github/workflows/: build.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  quicker_sfv_test  quicker_sfv_ui_tests
com_shim/: README.md  quicksfv_explorer.def  quicksfv_explorer_command.cpp
rust_core/: Cargo.toml  README.md  example_cpp_usage.cpp  quicksfv_core.h
rust_core/src/: bench.rs  lib.rs  main.rs
