[package]
name = "mtsfv"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mtsfv"
path = "src/main.rs"

[[bin]]
name = "mtsfv_gui"
path = "src/bin/mtsfv_gui.rs"

[lib]
name = "mtsfv_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
crc32fast = "1.4"
eframe = { version = "0.28", default-features = true, features = ["glow"] }
rfd = "0.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
